--- a/Site criativo/index.html
+++ b/Site criativo/index.html
@@ -11,7 +11,7 @@
     <header>  <h1>vai ser uma imagem aqui</h1>
         <ul>
             <li>escola</li>
-            <li>estudante hanjfjsgfiusgfisfgksfgkusd</li>
+            <li>estudante</li>
         </ul>
         </header>
   
